--- a/1_etl_to_gcs/pandas_test.ipynb
+++ b/1_etl_to_gcs/pandas_test.ipynb
@@ -2002,7 +2002,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "NULLIF( plant_id, '.') AS plant_id\t\t\t\n",
+    "NULLIF( combined_heat_and_power_plant, '.') AS combined_heat_and_power_plant\t\t\t\n",
+    "NULLIF( plant_name, '.') AS plant_name\t\t\t\n",
+    "NULLIF( operator_name, '.') AS operator_name\t\t\t\n",
+    "NULLIF( operator_id, '.') AS operator_id\t\t\t\n",
+    "NULLIF( plant_state, '.') AS plant_state\t\t\t\n",
+    "NULLIF( census_region, '.') AS census_region\t\t\t\n",
+    "NULLIF( nerc_region, '.') AS nerc_region\t\t\t\n",
+    "NULLIF( naics_code, '.') AS naics_code\t\t\t\n",
+    "NULLIF( eia_sector_number, '.') AS eia_sector_number\t\t\t\n",
+    "NULLIF( sector_name, '.') AS sector_name\t\t\t\n",
+    "NULLIF( reported_prime_mover, '.') AS reported_prime_mover\t\t\t\n",
+    "NULLIF( reported_fuel_type_code, '.') AS reported_fuel_type_code\t\t\t\n",
+    "NULLIF( aer_fuel_type_code, '.') AS aer_fuel_type_code\t\t\t\n",
+    "NULLIF( physical_unit_label, '.') AS physical_unit_label\n",
+    "CAST(NULLIF( quantity_of_energy_stored, '.') AS INT) AS quantity_of_energy_stored\n",
+    "CAST(NULLIF( elec_quantity, '.') AS INT) AS elec_quantity\n",
+    "CAST(NULLIF( gross_gen, '.') AS INT) AS gross_gen\n",
+    "CAST(NULLIF( net_gen, '.') AS INT) AS net_gen\n",
+    "NULLIF( month, '.') AS month\n",
+    "NULLIF( year, '.') AS year"
+   ]
   }
  ],
  "metadata": {
